flux/apps/cluster1/githunt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: githunt
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - kube1
      containers:
      - name: busybox
        volumeMounts:
        - name: data
          mountPath: /var/www
          readOnly: true
      volumes:
      - hostPath:
          path: /home/oleg/src/github.com/kamranahmedse/githunt/githunt-3.0-7
          type: Directory
        name: data
