flux/apps/cluster1/githunt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: githunt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - githunt.home.wugi.info
    secretName: githunt-home-wugi-info-ingress-certs
  rules:
  - host: githunt.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: githunt
            port:
              number: 80
